--- a/uCT_analysis/segment_scan_test.ipynb
+++ b/uCT_analysis/segment_scan_test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-15T21:28:48.089305Z",
-     "start_time": "2024-09-15T21:28:46.237383Z"
+     "end_time": "2024-09-15T22:34:16.681283Z",
+     "start_time": "2024-09-15T22:34:16.502030Z"
     }
    },
    "source": [
@@ -20,9 +20,18 @@
     "import napari\n",
     "from magicgui import magicgui, magic_factory\n",
     "import pandas as pd\n",
+    "from tqdm import tqdm\n",
     "cle.select_device(\"RTX\")"
    ],
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -37,25 +46,24 @@
        "\tImage Support:               Yes"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T21:28:51.302433Z",
-     "start_time": "2024-09-15T21:28:49.455478Z"
+     "end_time": "2024-09-15T22:27:42.508708Z",
+     "start_time": "2024-09-15T22:27:40.099211Z"
     }
    },
    "cell_type": "code",
    "source": [
     "path = \"../../04_uCT/AD51/\"\n",
-    "scan = load_scan(path, logging=True)\n",
-    "# scan.reslice()"
+    "scan = load_scan(path, logging=True)\n"
    ],
    "id": "96cae9eb82305a89",
    "outputs": [
@@ -64,137 +72,101 @@
      "output_type": "stream",
      "text": [
       "Loading images from:  ../../04_uCT/AD51/Slices/\n",
-      "Loaded stack with shape (1780, 322, 2267) and a size of 2.60 GB in 1.79 s.\n"
+      "Loaded stack with shape (1780, 322, 2267) and a size of 2.60 GB in 2.33 s.\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T21:28:52.028792Z",
-     "start_time": "2024-09-15T21:28:51.977814Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "subscan = scan[200:230]",
-   "id": "49b6bf2bcd57b833",
-   "outputs": [],
-   "execution_count": 3
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-15T21:29:01.422428Z",
-     "start_time": "2024-09-15T21:28:59.494252Z"
+     "end_time": "2024-09-15T22:27:42.582873Z",
+     "start_time": "2024-09-15T22:27:42.509719Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "@magicgui(auto_call=True)\n",
-    "def segment(scan: ImageData,\n",
-    "            logging: bool = True,\n",
-    "            otsu_sigma: float = 0.6,\n",
-    "            particle_enlarge_radius: int = 1,\n",
-    "            particle_mask_sigma: float = 0.1,\n",
-    "            particle_erosions: int = 0,\n",
-    "            smooth_labels_radius: int = 2) -> LabelsData:\n",
-    "    mask = segment_scan(scan, logging, otsu_sigma, particle_enlarge_radius, particle_mask_sigma, particle_erosions, smooth_labels_radius)\n",
-    "    return mask\n",
-    "\n",
-    "\n",
-    "def process_subset_in_napari(scan: ImageData, subset_size: int = 30):\n",
-    "    @magicgui(auto_call=True)\n",
-    "    def segment(scan: ImageData,\n",
-    "                logging: bool = True,\n",
-    "                otsu_sigma: float = 0.6,\n",
-    "                particle_enlarge_radius: int = 1,\n",
-    "                particle_mask_sigma: float = 0.1,\n",
-    "                particle_erosions: int = 0,\n",
-    "                smooth_labels_radius: int = 2) -> LabelsData:\n",
-    "        mask = segment_scan(scan, logging, otsu_sigma, particle_enlarge_radius, particle_mask_sigma, particle_erosions, smooth_labels_radius)\n",
-    "        return mask\n",
-    "    \n",
+    "def divide_scan(scan, size_gb: float = 1):\n",
+    "    \"\"\"Returns the indexes that split an array into parts of roughly equal size less than size_gb GB.\"\"\"\n",
+    "    n_parts = int(np.ceil(scan.nbytes / size_gb / 1e9))\n",
     "    n_slices, _, _ = scan.shape\n",
-    "    subscan = scan[n_slices//2-subset_size//2:n_slices//2+subset_size//2]\n",
-    "    \n",
-    "    viewer = napari.Viewer()\n",
-    "    viewer.add_image(subscan)\n",
-    "    viewer.window.add_dock_widget(segment, area='right')\n",
+    "    part_size = n_slices // n_parts\n",
+    "    rest = n_slices % n_parts\n",
+    "    part_sizes = [0] + [part_size] * n_parts\n",
+    "    part_sizes[-1] += rest\n",
+    "    part_sizes = np.cumsum(part_sizes)\n",
+    "    return part_sizes\n",
+    "\n",
+    "split_idxs = divide_scan(scan.scan)\n",
     "    "
    ],
-   "id": "3884597b879136bd",
+   "id": "fbfec5bb6d54f70",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T21:22:31.467426Z",
-     "start_time": "2024-09-15T21:21:13.649128Z"
+     "end_time": "2024-09-15T22:27:42.656201Z",
+     "start_time": "2024-09-15T22:27:42.583880Z"
     }
    },
    "cell_type": "code",
-   "source": "mask = segment(subscan)",
-   "id": "68262b21c667b3b3",
+   "source": "# process_subset_in_napari(scan.scan)",
+   "id": "3884597b879136bd",
+   "outputs": [],
+   "execution_count": 20
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-15T22:27:42.730474Z",
+     "start_time": "2024-09-15T22:27:42.657208Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(\"size of subscan: {:.2f} MB\".format(scan[:800].nbytes/1e6))",
+   "id": "2e031c1d5c03f190",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Smoothed image.\n",
-      "Finished otsu masks.\n",
-      "Finished refined particle mask.\n",
-      "Created full segmentation.\n"
+      "size of subscan: 1167.96 MB\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T21:22:33.101079Z",
-     "start_time": "2024-09-15T21:22:31.468431Z"
+     "end_time": "2024-09-15T22:28:39.387803Z",
+     "start_time": "2024-09-15T22:27:42.731480Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "viewer = napari.Viewer()\n",
-    "viewer.add_image(subscan)\n",
-    "viewer.add_labels(mask)"
+    "mask = np.zeros_like(scan.scan)\n",
+    "for ii in tqdm(range(len(split_idxs)-1)):\n",
+    "    left, right = split_idxs[ii], split_idxs[ii+1]\n",
+    "    mask[left:right, :, :] = segment_scan(scan[left:right],\n",
+    "                            logging=True,\n",
+    "                            otsu_sigma=0.6,\n",
+    "                            particle_mask_sigma=0.1,\n",
+    "                            particle_enlarge_radius=1,\n",
+    "                            smooth_labels_radius=2)\n"
    ],
-   "id": "df4fe2150df1e09a",
+   "id": "68262b21c667b3b3",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Labels layer 'mask' at 0x254bc1079d0>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 6
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-15T21:29:08.906420Z",
-     "start_time": "2024-09-15T21:29:02.360694Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "viewer = napari.Viewer()\n",
-    "viewer.add_image(subscan)\n",
-    "viewer.window.add_dock_widget(segment, area='right')"
-   ],
-   "id": "7e0398738f292881",
-   "outputs": [
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/3 [00:00<?, ?it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -206,17 +178,108 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 33%|███▎      | 1/3 [00:18<00:37, 18.73s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Smoothed image.\n",
+      "Finished otsu masks.\n",
+      "Finished refined particle mask.\n",
+      "Created full segmentation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|██████▋   | 2/3 [00:36<00:18, 18.27s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Smoothed image.\n",
+      "Finished otsu masks.\n",
+      "Finished refined particle mask.\n",
+      "Created full segmentation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:56<00:00, 18.74s/it]\n"
+     ]
+    }
+   ],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "save_mask(mask,\n",
+    "          path=path + \"segmented2/\")"
+   ],
+   "id": "a6eac40d3e98615e",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-15T22:29:10.119144Z",
+     "start_time": "2024-09-15T22:29:09.231650Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "viewer = napari.Viewer()\n",
+    "viewer.add_image(scan.scan)\n",
+    "viewer.add_labels(mask)"
+   ],
+   "id": "df4fe2150df1e09a",
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "<napari._qt.widgets.qt_viewer_dock_widget.QtViewerDockWidget at 0x1b113dd8c10>"
+       "<Labels layer 'mask' at 0x21582712c50>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 25
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-15T22:28:40.070494Z",
+     "start_time": "2024-09-15T22:28:39.988220Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# viewer = napari.Viewer()\n",
+    "# viewer.add_image(subscan)\n",
+    "# viewer.window.add_dock_widget(segment, area='right')"
+   ],
+   "id": "7e0398738f292881",
+   "outputs": [],
+   "execution_count": 24
   }
  ],
  "metadata": {
