Split utils into dedicated files

--- a/uCT_analysis/cle_test.ipynb
+++ b/uCT_analysis/cle_test.ipynb
@@ -11,9 +11,8 @@
     }
    },
    "source": [
-    "import cv2\n",
+    "\n",
     "import scipy.ndimage\n",
-    "from skimage.transform import resize\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -22,10 +21,10 @@
     "from magicgui import magicgui\n",
     "from napari.types import ImageData, LabelsData\n",
     "import matplotlib.pyplot as plt\n",
-    "from utils import load_scan, contact_area\n",
+    "from mt.utils import load_scan, contact_area\n",
     "import skimage\n",
     "import scipy\n",
-    "import numpy as np\n",
+    "\n",
     "cle.select_device(\"RTX\")\n",
     "import cv2"
    ],
