--- a/uCT_analysis/eroded_gauss_otsu.ipynb
+++ b/uCT_analysis/eroded_gauss_otsu.ipynb
@@ -11,20 +11,16 @@
     }
    },
    "source": [
-    "import pandas as pd\n",
-    "import skimage.exposure\n",
+    "\n",
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "import pyclesperanto as cle\n",
-    "from skimage.io import imread\n",
     "import napari\n",
     "from napari.types import ImageData, LabelsData\n",
-    "from utils import load_scan, reslice\n",
+    "from mt.utils import load_scan, reslice\n",
     "from magicgui import magicgui\n",
     "from matplotlib import pyplot as plt\n",
-    "import skimage\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
     "cle.select_device(\"RTX\")"
    ],
