--- a/uCT_analysis/segment_scan_test.ipynb
+++ b/uCT_analysis/segment_scan_test.ipynb
@@ -14,12 +14,10 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from utils import *\n",
+    "from mt.utils import *\n",
     "import pyclesperanto as cle\n",
     "import numpy as np\n",
     "import napari\n",
-    "from magicgui import magicgui, magic_factory\n",
-    "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "cle.select_device(\"RTX\")"
    ],
