Commit to prevent Onedrive conflicts

--- a/laser/function_generator_plots.ipynb
+++ b/laser/function_generator_plots.ipynb
@@ -6,26 +6,26 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-09T09:09:33.623689Z",
-     "start_time": "2024-09-09T09:09:30.614842Z"
+     "end_time": "2024-09-16T14:16:28.319341Z",
+     "start_time": "2024-09-16T14:16:28.102661Z"
     }
    },
    "source": [
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
-    "from utils import get_func_gen_settings\n",
+    "from mt.laser import get_func_gen_settings\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T09:09:33.790026Z",
-     "start_time": "2024-09-09T09:09:33.636703Z"
+     "end_time": "2024-09-16T14:16:28.592121Z",
+     "start_time": "2024-09-16T14:16:28.352987Z"
     }
    },
    "cell_type": "code",
@@ -43,13 +43,13 @@
    ],
    "id": "a8941015cfc4ccbd",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T09:09:35.982100Z",
-     "start_time": "2024-09-09T09:09:34.323351Z"
+     "end_time": "2024-09-16T14:16:29.141471Z",
+     "start_time": "2024-09-16T14:16:28.632349Z"
     }
    },
    "cell_type": "code",
@@ -86,13 +86,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 3
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T09:09:37.947131Z",
-     "start_time": "2024-09-09T09:09:37.508704Z"
+     "end_time": "2024-09-16T14:16:29.727780Z",
+     "start_time": "2024-09-16T14:16:29.177121Z"
     }
    },
    "cell_type": "code",
@@ -121,7 +121,7 @@
        "Text(0.5, 1.0, 'Equivalent energy in J/mm^2')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -136,7 +136,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 4
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -154,14 +154,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-09T09:09:43.830852Z",
-     "start_time": "2024-09-09T09:09:43.709935Z"
+     "end_time": "2024-09-16T14:16:46.096319Z",
+     "start_time": "2024-09-16T14:16:45.887501Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "on = 0.01 # s\n",
-    "off = 0.02 # s\n",
+    "on = 0.015 # s\n",
+    "off = on*2 # s\n",
     "passes = 10\n",
     "\n",
     "\n",
@@ -174,24 +174,24 @@
      "output_type": "stream",
      "text": [
       "Settings:\n",
-      "Set on time: 10 ms\n",
-      "Set off time: 20 ms\n",
+      "Set on time: 15 ms\n",
+      "Set off time: 30 ms\n",
       "Cycles: 10\n",
       "--------------------\n",
-      "Speed: 8.0 mm/s\n",
-      "Frequency: 33.20 Hz\n",
+      "Speed: 5.4 mm/s\n",
+      "Frequency: 22.41 Hz\n",
       "Duty cycle: 33 %\n",
-      "Total time over spot: 0.30 s\n",
-      "Equivalent energy: 0.64 J/mm^2\n",
+      "Total time over spot: 0.45 s\n",
+      "Equivalent energy: 0.95 J/mm^2\n",
       "--------------------\n",
-      "Actual on time: 10 ms\n",
-      "Total on time: 100 ms\n",
-      "Actual off time: 20 ms\n",
-      "Total off time: 201 ms\n"
+      "Actual on time: 15 ms\n",
+      "Total on time: 149 ms\n",
+      "Actual off time: 30 ms\n",
+      "Total off time: 298 ms\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 11
   }
  ],
  "metadata": {
