--- a/uCT_analysis/segment_scan_test.ipynb
+++ b/uCT_analysis/segment_scan_test.ipynb
@@ -14,7 +14,8 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from mt.utils import *\n",
+    "from mt.scan_utils import *\n",
+    "\n",
     "import pyclesperanto as cle\n",
     "import numpy as np\n",
     "import napari\n",
