--- a/uCT_analysis/segment_scan_test.ipynb
+++ b/uCT_analysis/segment_scan_test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-15T22:34:16.681283Z",
-     "start_time": "2024-09-15T22:34:16.502030Z"
+     "end_time": "2024-09-18T09:57:09.838513Z",
+     "start_time": "2024-09-18T09:57:07.908809Z"
     }
    },
    "source": [
@@ -15,6 +15,7 @@
     "%autoreload 2\n",
     "\n",
     "from mt.scan_utils import *\n",
+    "from mt.scan import *\n",
     "\n",
     "import pyclesperanto as cle\n",
     "import numpy as np\n",
@@ -34,35 +35,37 @@
     {
      "data": {
       "text/plain": [
-       "(OpenCL) NVIDIA GeForce RTX 4070 SUPER (OpenCL 3.0 CUDA)\n",
+       "(OpenCL) NVIDIA GeForce RTX 3060 Laptop GPU (OpenCL 3.0 CUDA)\n",
        "\tVendor:                      NVIDIA Corporation\n",
-       "\tDriver Version:              560.70\n",
+       "\tDriver Version:              516.95\n",
        "\tDevice Type:                 GPU\n",
-       "\tCompute Units:               56\n",
-       "\tGlobal Memory Size:          12281 MB\n",
-       "\tMaximum Object Size:         3070 MB\n",
-       "\tMax Clock Frequency:         2505 MHz\n",
+       "\tCompute Units:               30\n",
+       "\tGlobal Memory Size:          6143 MB\n",
+       "\tMaximum Object Size:         1535 MB\n",
+       "\tMax Clock Frequency:         1425 MHz\n",
        "\tImage Support:               Yes"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 28
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T22:27:42.508708Z",
-     "start_time": "2024-09-15T22:27:40.099211Z"
+     "end_time": "2024-09-18T10:03:02.734888Z",
+     "start_time": "2024-09-18T10:02:50.979926Z"
     }
    },
    "cell_type": "code",
    "source": [
     "path = \"../../04_uCT/AD51/\"\n",
-    "scan = load_scan(path, logging=True)\n"
+    "scan = Scan(path)\n",
+    "scan.load(logging=True)\n",
+    "\n"
    ],
    "id": "96cae9eb82305a89",
    "outputs": [
@@ -71,11 +74,24 @@
      "output_type": "stream",
      "text": [
       "Loading images from:  ../../04_uCT/AD51/Slices/\n",
-      "Loaded stack with shape (1780, 322, 2267) and a size of 2.60 GB in 2.33 s.\n"
+      "Loaded stack with shape (1780, 322, 2267) and a size of 2.60 GB in 11.23 s.\n"
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-18T10:03:11.237785Z",
+     "start_time": "2024-09-18T10:03:10.953943Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "scan.calculate_properties()",
+   "id": "79d8e60c9d04799e",
+   "outputs": [],
+   "execution_count": 11
   },
   {
    "metadata": {
