--- a/uCT_analysis/segment_scan_test.ipynb
+++ b/uCT_analysis/segment_scan_test.ipynb
@@ -6,32 +6,19 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-18T09:57:09.838513Z",
-     "start_time": "2024-09-18T09:57:07.908809Z"
+     "end_time": "2024-09-18T14:31:09.894257Z",
+     "start_time": "2024-09-18T14:31:09.404269Z"
     }
    },
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
+    "# %load_ext autoreload\n",
+    "# %autoreload 2\n",
     "\n",
-    "from mt.scan_utils import *\n",
     "from mt.scan import *\n",
     "\n",
-    "import pyclesperanto as cle\n",
-    "import numpy as np\n",
-    "import napari\n",
-    "from tqdm import tqdm\n",
     "cle.select_device(\"RTX\")"
    ],
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -46,26 +33,26 @@
        "\tImage Support:               Yes"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T10:03:02.734888Z",
-     "start_time": "2024-09-18T10:02:50.979926Z"
+     "end_time": "2024-09-18T14:37:56.323089Z",
+     "start_time": "2024-09-18T14:37:48.275515Z"
     }
    },
    "cell_type": "code",
    "source": [
     "path = \"../../04_uCT/AD51/\"\n",
-    "scan = Scan(path)\n",
-    "scan.load(logging=True)\n",
-    "\n"
+    "scan = Scan(path,\n",
+    "            low_memory_mode=0)\n",
+    "scan.load(logging=True)"
    ],
    "id": "96cae9eb82305a89",
    "outputs": [
@@ -74,7 +61,7 @@
      "output_type": "stream",
      "text": [
       "Loading images from:  ../../04_uCT/AD51/Slices/\n",
-      "Loaded stack with shape (1780, 322, 2267) and a size of 2.60 GB in 11.23 s.\n"
+      "Loaded stack with shape (1780, 322, 2267) and a size of 2.60 GB in 8.04 s.\n"
      ]
     }
    ],
@@ -83,218 +70,118 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T10:03:11.237785Z",
-     "start_time": "2024-09-18T10:03:10.953943Z"
+     "end_time": "2024-09-18T14:38:21.704787Z",
+     "start_time": "2024-09-18T14:37:57.689353Z"
     }
    },
    "cell_type": "code",
-   "source": "scan.calculate_properties()",
-   "id": "79d8e60c9d04799e",
+   "source": "scan.try_segmentation_settings()",
+   "id": "84313fbec557f455",
    "outputs": [],
    "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T22:27:42.582873Z",
-     "start_time": "2024-09-15T22:27:42.509719Z"
+     "end_time": "2024-09-18T14:31:16.041180Z",
+     "start_time": "2024-09-18T14:31:16.034289Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def divide_scan(scan, size_gb: float = 1):\n",
-    "    \"\"\"Returns the indexes that split an array into parts of roughly equal size less than size_gb GB.\"\"\"\n",
-    "    n_parts = int(np.ceil(scan.nbytes / size_gb / 1e9))\n",
-    "    n_slices, _, _ = scan.shape\n",
-    "    part_size = n_slices // n_parts\n",
-    "    rest = n_slices % n_parts\n",
-    "    part_sizes = [0] + [part_size] * n_parts\n",
-    "    part_sizes[-1] += rest\n",
-    "    part_sizes = np.cumsum(part_sizes)\n",
-    "    return part_sizes\n",
-    "\n",
-    "split_idxs = divide_scan(scan.scan)\n",
-    "    "
+    "settings = SegmentationSettings(otsu_sigma=1,\n",
+    "                                particle_mask_sigma=0.1,\n",
+    "                                particle_n_erosions=2,\n",
+    "                                particle_enlarge_radius=1,\n",
+    "                                smooth_labels_radius=2)\n",
+    "scan.set_segmentation_settings(settings)"
    ],
-   "id": "fbfec5bb6d54f70",
+   "id": "bb06eeeb2b1d2340",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T22:27:42.656201Z",
-     "start_time": "2024-09-15T22:27:42.583880Z"
+     "end_time": "2024-09-18T14:31:16.081072Z",
+     "start_time": "2024-09-18T14:31:16.073921Z"
     }
    },
    "cell_type": "code",
-   "source": "# process_subset_in_napari(scan.scan)",
-   "id": "3884597b879136bd",
-   "outputs": [],
-   "execution_count": 20
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-15T22:27:42.730474Z",
-     "start_time": "2024-09-15T22:27:42.657208Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "print(\"size of subscan: {:.2f} MB\".format(scan[:800].nbytes/1e6))",
-   "id": "2e031c1d5c03f190",
+   "source": "print(scan.segmentation_settings)",
+   "id": "c4c0e1f2e108508b",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "size of subscan: 1167.96 MB\n"
+      "Segmentation settings:\n",
+      " Otsu thresholding: Gaussian smoothing sigma: 1.00\n",
+      " Particle mask: Gaussian smoothing sigma: 0.10\n",
+      " Particle mask: Erosion iterations: 2\n",
+      " Particle mask: Dilation radius: 1\n",
+      " Mask postprocessing: Smoothing radius: 2\n"
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T22:28:39.387803Z",
-     "start_time": "2024-09-15T22:27:42.731480Z"
+     "end_time": "2024-09-18T14:35:54.326269Z",
+     "start_time": "2024-09-18T14:31:16.204043Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "mask = np.zeros_like(scan.scan)\n",
-    "for ii in tqdm(range(len(split_idxs)-1)):\n",
-    "    left, right = split_idxs[ii], split_idxs[ii+1]\n",
-    "    mask[left:right, :, :] = segment_scan(scan[left:right],\n",
-    "                            logging=True,\n",
-    "                            otsu_sigma=0.6,\n",
-    "                            particle_mask_sigma=0.1,\n",
-    "                            particle_enlarge_radius=1,\n",
-    "                            smooth_labels_radius=2)\n"
-   ],
-   "id": "68262b21c667b3b3",
+   "source": "scan.segment_scan()",
+   "id": "79d8e60c9d04799e",
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/3 [00:00<?, ?it/s]"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Smoothed image.\n",
-      "Finished otsu masks.\n",
-      "Finished refined particle mask.\n",
-      "Created full segmentation.\n"
+      "Segmenting scan in low memory mode.\n",
+      "Splitting scan into 5 parts of 0.52 GB each.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 33%|███▎      | 1/3 [00:18<00:37, 18.73s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Smoothed image.\n",
-      "Finished otsu masks.\n",
-      "Finished refined particle mask.\n",
-      "Created full segmentation.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 67%|██████▋   | 2/3 [00:36<00:18, 18.27s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Smoothed image.\n",
-      "Finished otsu masks.\n",
-      "Finished refined particle mask.\n",
-      "Created full segmentation.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3/3 [00:56<00:00, 18.74s/it]\n"
+      "100%|██████████| 5/5 [04:37<00:00, 55.53s/it]\n"
      ]
     }
    ],
-   "execution_count": 22
-  },
-  {
-   "metadata": {
-    "jupyter": {
-     "is_executing": true
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "save_mask(mask,\n",
-    "          path=path + \"segmented2/\")"
-   ],
-   "id": "a6eac40d3e98615e",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T22:29:10.119144Z",
-     "start_time": "2024-09-15T22:29:09.231650Z"
+     "end_time": "2024-09-18T14:36:03.506510Z",
+     "start_time": "2024-09-18T14:35:54.385266Z"
     }
    },
    "cell_type": "code",
    "source": [
     "viewer = napari.Viewer()\n",
     "viewer.add_image(scan.scan)\n",
-    "viewer.add_labels(mask)"
+    "viewer.add_labels(scan.mask)"
    ],
    "id": "df4fe2150df1e09a",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Labels layer 'mask' at 0x21582712c50>"
+       "<Labels layer 'Labels' at 0x1a74cf335d0>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 25
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-15T22:28:40.070494Z",
-     "start_time": "2024-09-15T22:28:39.988220Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# viewer = napari.Viewer()\n",
-    "# viewer.add_image(subscan)\n",
-    "# viewer.window.add_dock_widget(segment, area='right')"
-   ],
-   "id": "7e0398738f292881",
-   "outputs": [],
-   "execution_count": 24
+   "execution_count": 8
   }
  ],
  "metadata": {
