--- a/uCT_analysis/segment_scan_test.ipynb
+++ b/uCT_analysis/segment_scan_test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-18T14:31:09.894257Z",
-     "start_time": "2024-09-18T14:31:09.404269Z"
+     "end_time": "2024-09-18T16:19:10.821914Z",
+     "start_time": "2024-09-18T16:19:03.973704Z"
     }
    },
    "source": [
@@ -16,35 +16,16 @@
     "\n",
     "from mt.scan import *\n",
     "\n",
-    "cle.select_device(\"RTX\")"
+    "# cle.select_device(\"RTX\")"
    ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(OpenCL) NVIDIA GeForce RTX 3060 Laptop GPU (OpenCL 3.0 CUDA)\n",
-       "\tVendor:                      NVIDIA Corporation\n",
-       "\tDriver Version:              516.95\n",
-       "\tDevice Type:                 GPU\n",
-       "\tCompute Units:               30\n",
-       "\tGlobal Memory Size:          6143 MB\n",
-       "\tMaximum Object Size:         1535 MB\n",
-       "\tMax Clock Frequency:         1425 MHz\n",
-       "\tImage Support:               Yes"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 2
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T14:37:56.323089Z",
-     "start_time": "2024-09-18T14:37:48.275515Z"
+     "end_time": "2024-09-18T16:19:31.837727Z",
+     "start_time": "2024-09-18T16:19:12.649601Z"
     }
    },
    "cell_type": "code",
@@ -61,30 +42,30 @@
      "output_type": "stream",
      "text": [
       "Loading images from:  ../../04_uCT/AD51/Slices/\n",
-      "Loaded stack with shape (1780, 322, 2267) and a size of 2.60 GB in 8.04 s.\n"
+      "Loaded stack with shape (1780, 322, 2267) and a size of 2.60 GB in 19.17 s.\n"
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T14:38:21.704787Z",
-     "start_time": "2024-09-18T14:37:57.689353Z"
+     "end_time": "2024-09-18T16:21:17.738264Z",
+     "start_time": "2024-09-18T16:19:37.020264Z"
     }
    },
    "cell_type": "code",
    "source": "scan.try_segmentation_settings()",
    "id": "84313fbec557f455",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T14:31:16.041180Z",
-     "start_time": "2024-09-18T14:31:16.034289Z"
+     "end_time": "2024-09-18T15:38:52.429032Z",
+     "start_time": "2024-09-18T15:38:52.423309Z"
     }
    },
    "cell_type": "code",
@@ -98,13 +79,13 @@
    ],
    "id": "bb06eeeb2b1d2340",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T14:31:16.081072Z",
-     "start_time": "2024-09-18T14:31:16.073921Z"
+     "end_time": "2024-09-18T15:38:52.451745Z",
+     "start_time": "2024-09-18T15:38:52.445006Z"
     }
    },
    "cell_type": "code",
@@ -124,17 +105,16 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T14:35:54.326269Z",
-     "start_time": "2024-09-18T14:31:16.204043Z"
+     "start_time": "2024-09-18T15:38:52.575319Z"
     }
    },
    "cell_type": "code",
-   "source": "scan.segment_scan()",
+   "source": "scan.segment()",
    "id": "79d8e60c9d04799e",
    "outputs": [
     {
@@ -149,16 +129,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [04:37<00:00, 55.53s/it]\n"
+      "  0%|          | 0/5 [00:00<?, ?it/s]"
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T14:36:03.506510Z",
+     "end_time": "2024-09-18T15:37:14.490905600Z",
      "start_time": "2024-09-18T14:35:54.385266Z"
     }
    },
@@ -182,6 +162,12 @@
     }
    ],
    "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "6a3191e360ac71b"
   }
  ],
  "metadata": {
