updated ct_utils with 2 class air segmentation

--- a/uCT_analysis/segment_scan_test.ipynb
+++ b/uCT_analysis/segment_scan_test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-18T22:39:07.783426Z",
-     "start_time": "2024-09-18T22:39:06.121900Z"
+     "end_time": "2024-09-19T10:12:45.748791Z",
+     "start_time": "2024-09-19T10:12:45.593707Z"
     }
    },
    "source": [
@@ -15,10 +15,18 @@
     "%autoreload 2\n",
     "\n",
     "from mt.scan import *\n",
-    "\n",
+    "from mt.ct_utils import adjust_contrast\n",
     "cle.select_device(\"RTX\")"
    ],
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -33,24 +41,25 @@
        "\tImage Support:               Yes"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T22:39:19.863847Z",
-     "start_time": "2024-09-18T22:39:07.790434Z"
+     "end_time": "2024-09-19T10:13:06.560812Z",
+     "start_time": "2024-09-19T10:12:59.274586Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "path = \"../../04_uCT/AD48/\"\n",
-    "scan = Scan(path,\n",
+    "path1 = \"../../04_uCT/AD51/\"\n",
+    "path2 = \"../../04_uCT/AD67/\"\n",
+    "scan = Scan(path2,\n",
     "            low_memory_mode=0,\n",
     "            discard_ends=True)\n",
     "scan.load(logging=True,\n",
@@ -62,66 +71,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading images from:  ../../04_uCT/AD48/Slices/\n",
-      "Loaded stack with shape (1797, 203, 2425) and a size of 1.77 GB in 3.37 s.\n",
-      "Loading images from:  ../../04_uCT/AD48/Segmentation/\n",
-      "Loaded stack with shape (1637, 203, 2425) and a size of 0.81 GB in 8.66 s.\n",
-      "Loaded existing mask from: ../../04_uCT/AD48/Segmentation\n"
+      "Loading images from:  ../../04_uCT/AD67/Slices/\n",
+      "Loaded stack with shape (1781, 126, 2231) and a size of 1.00 GB in 7.14 s.\n",
+      "No Segmentation folder found at: ../../04_uCT/AD67/Segmentation\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T22:39:20.919819Z",
-     "start_time": "2024-09-18T22:39:20.020873Z"
+     "end_time": "2024-09-19T10:17:28.140716Z",
+     "start_time": "2024-09-19T10:17:27.155699Z"
     }
    },
    "cell_type": "code",
-   "source": "# scan.try_segmentation_settings()",
+   "source": "scan.try_segmentation_settings(subset_size=30)",
    "id": "84313fbec557f455",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T22:39:21.286653Z",
-     "start_time": "2024-09-18T22:39:21.240908Z"
+     "end_time": "2024-09-19T10:05:18.940187Z",
+     "start_time": "2024-09-19T10:05:18.897025Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "settings = SegmentationSettings(otsu_sigma=1.1,\n",
+    "settings = SegmentationSettings(otsu_sigma=1.5,\n",
     "                                particle_mask_sigma=0.1,\n",
     "                                particle_n_erosions=2,\n",
     "                                particle_enlarge_radius=1,\n",
     "                                smooth_labels_radius=2)\n",
-    "scan.set_segmentation_settings(settings)"
+    "scan.set_segmentation_settings(settings)\n",
+    "print(scan.segmentation_settings)"
    ],
    "id": "bb06eeeb2b1d2340",
-   "outputs": [],
-   "execution_count": 4
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-18T22:39:21.349086Z",
-     "start_time": "2024-09-18T22:39:21.303420Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "print(scan.segmentation_settings)",
-   "id": "c4c0e1f2e108508b",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Segmentation settings:\n",
-      " Otsu thresholding: Gaussian smoothing sigma: 1.10\n",
+      " Otsu thresholding: Gaussian smoothing sigma: 1.50\n",
       " Particle mask: Gaussian smoothing sigma: 0.10\n",
       " Particle mask: Erosion iterations: 2\n",
       " Particle mask: Dilation radius: 1\n",
@@ -134,8 +129,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T22:39:38.324737Z",
-     "start_time": "2024-09-18T22:39:21.440691Z"
+     "end_time": "2024-09-19T10:07:30.358857Z",
+     "start_time": "2024-09-19T10:05:33.983543Z"
     }
    },
    "cell_type": "code",
@@ -155,21 +150,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T22:39:38.386743Z",
-     "start_time": "2024-09-18T22:39:38.340464Z"
+     "end_time": "2024-09-19T10:12:09.334671Z",
+     "start_time": "2024-09-19T10:12:09.263221Z"
     }
    },
    "cell_type": "code",
    "source": "scan.save()",
    "id": "4f173f6c90ae0464",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T22:39:47.854673Z",
-     "start_time": "2024-09-18T22:39:38.403449Z"
+     "end_time": "2024-09-19T10:12:21.313696Z",
+     "start_time": "2024-09-19T10:12:11.036762Z"
     }
    },
    "cell_type": "code",
@@ -180,18 +175,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving masks to:  ../../04_uCT/AD48/Segmentation\n"
+      "Saving masks to:  ../../04_uCT/AD68/Segmentation\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1637it [00:09, 174.14it/s]\n"
+      "1621it [00:10, 158.92it/s]\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-19T10:11:05.332438Z",
+     "start_time": "2024-09-19T10:11:01.820075Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "scan.show()",
+   "id": "59015ccb3ea3263f",
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "metadata": {
