update scan.py with new segmentation

--- a/uCT_analysis/segment_scan_test.ipynb
+++ b/uCT_analysis/segment_scan_test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-19T10:12:45.748791Z",
-     "start_time": "2024-09-19T10:12:45.593707Z"
+     "end_time": "2024-09-22T20:17:46.827913Z",
+     "start_time": "2024-09-22T20:17:46.668498Z"
     }
    },
    "source": [
@@ -15,7 +15,6 @@
     "%autoreload 2\n",
     "\n",
     "from mt.scan import *\n",
-    "from mt.ct_utils import adjust_contrast\n",
     "cle.select_device(\"RTX\")"
    ],
    "outputs": [
@@ -41,26 +40,24 @@
        "\tImage Support:               Yes"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-19T10:13:06.560812Z",
-     "start_time": "2024-09-19T10:12:59.274586Z"
+     "end_time": "2024-09-22T20:17:48.719665Z",
+     "start_time": "2024-09-22T20:17:46.985562Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "path1 = \"../../04_uCT/AD51/\"\n",
-    "path2 = \"../../04_uCT/AD67/\"\n",
-    "scan = Scan(path2,\n",
-    "            low_memory_mode=0,\n",
+    "path = \"../../04_uCT/AD67/\"\n",
+    "scan = Scan(path,\n",
     "            discard_ends=True)\n",
     "scan.load(logging=True,\n",
     "          refresh=True)"
@@ -72,37 +69,87 @@
      "output_type": "stream",
      "text": [
       "Loading images from:  ../../04_uCT/AD67/Slices/\n",
-      "Loaded stack with shape (1781, 126, 2231) and a size of 1.00 GB in 7.14 s.\n",
-      "No Segmentation folder found at: ../../04_uCT/AD67/Segmentation\n"
+      "Loaded stack with shape (1781, 126, 2231) and a size of 1.00 GB in 1.45 s.\n",
+      "Loaded existing mask from: ../../04_uCT/AD67/segmentation.npy\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-19T10:17:28.140716Z",
-     "start_time": "2024-09-19T10:17:27.155699Z"
+     "end_time": "2024-09-22T20:17:48.839322Z",
+     "start_time": "2024-09-22T20:17:48.761703Z"
     }
    },
    "cell_type": "code",
-   "source": "scan.try_segmentation_settings(subset_size=30)",
+   "source": "# scan.try_segmentation_settings()",
    "id": "84313fbec557f455",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-19T10:05:18.940187Z",
-     "start_time": "2024-09-19T10:05:18.897025Z"
+     "end_time": "2024-09-22T20:17:50.516782Z",
+     "start_time": "2024-09-22T20:17:48.844328Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "# scan.try_segmentation_settings(segment_particles_only=True)\n",
+   "id": "997c92c23930bda1",
+   "outputs": [],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-22T20:17:50.644842Z",
+     "start_time": "2024-09-22T20:17:50.568852Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "settings = SegmentationSettings(otsu_sigma=1.5,\n",
-    "                                particle_mask_sigma=0.1,\n",
+    "settings = SegmentationSettings(particle_mask_sigma=0.4,\n",
+    "                                particle_n_erosions=3,\n",
+    "                                particle_enlarge_radius=1)\n",
+    "scan.set_particle_segmentation_settings(settings)\n",
+    "print(scan.particle_segmentation_settings)"
+   ],
+   "id": "311bb33242bdf9c0",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "air_mask_simga = 0.6\n",
+      "air_n_erosions = 2\n",
+      "particle_mask_sigma = 0.4\n",
+      "particle_n_erosions = 3\n",
+      "particle_enlarge_radius = 1\n",
+      "smooth_labels_radius = 2\n",
+      "contrast_min_percentile = 0\n",
+      "contrast_max_percentile = 100\n"
+     ]
+    }
+   ],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-22T20:17:50.799681Z",
+     "start_time": "2024-09-22T20:17:50.724047Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "settings = SegmentationSettings(air_mask_sigma=0.6,\n",
+    "                                air_n_erosions=2,\n",
+    "                                contrast_min_percentile=0,\n",
+    "                                contrast_max_percentile=9,\n",
+    "                                particle_mask_sigma=0.2,\n",
     "                                particle_n_erosions=2,\n",
     "                                particle_enlarge_radius=1,\n",
     "                                smooth_labels_radius=2)\n",
@@ -115,125 +162,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Segmentation settings:\n",
-      " Otsu thresholding: Gaussian smoothing sigma: 1.50\n",
-      " Particle mask: Gaussian smoothing sigma: 0.10\n",
-      " Particle mask: Erosion iterations: 2\n",
-      " Particle mask: Dilation radius: 1\n",
-      " Mask postprocessing: Smoothing radius: 2\n"
+      "air_mask_simga = 0.6\n",
+      "air_n_erosions = 2\n",
+      "particle_mask_sigma = 0.2\n",
+      "particle_n_erosions = 2\n",
+      "particle_enlarge_radius = 1\n",
+      "smooth_labels_radius = 2\n",
+      "contrast_min_percentile = 0\n",
+      "contrast_max_percentile = 9\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-19T10:07:30.358857Z",
-     "start_time": "2024-09-19T10:05:33.983543Z"
+     "end_time": "2024-09-22T20:18:26.133659Z",
+     "start_time": "2024-09-22T20:17:50.818632Z"
     }
    },
    "cell_type": "code",
-   "source": "scan.segment(logging=True)",
+   "source": "scan.segment()",
    "id": "79d8e60c9d04799e",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Segmenting scan in full memory mode.\n"
-     ]
-    }
-   ],
-   "execution_count": 6
+   "outputs": [],
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-19T10:12:09.334671Z",
-     "start_time": "2024-09-19T10:12:09.263221Z"
+     "end_time": "2024-09-22T20:18:34.914063Z",
+     "start_time": "2024-09-22T20:18:26.162283Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "scan.segment_particles()",
+   "id": "3ad5eaab50af2f6b",
+   "outputs": [],
+   "execution_count": 25
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-22T20:18:35.526579Z",
+     "start_time": "2024-09-22T20:18:34.932181Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "scan.show()",
+   "id": "402f27988caa424",
+   "outputs": [],
+   "execution_count": 26
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-22T20:18:39.181931Z",
+     "start_time": "2024-09-22T20:18:35.569542Z"
     }
    },
    "cell_type": "code",
    "source": "scan.save()",
    "id": "4f173f6c90ae0464",
    "outputs": [],
-   "execution_count": 8
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-19T10:12:21.313696Z",
-     "start_time": "2024-09-19T10:12:11.036762Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "scan.save_segmentation()",
-   "id": "c14a346b449e36a6",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving masks to:  ../../04_uCT/AD68/Segmentation\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1621it [00:10, 158.92it/s]\n"
-     ]
-    }
-   ],
-   "execution_count": 9
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-19T10:11:05.332438Z",
-     "start_time": "2024-09-19T10:11:01.820075Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "scan.show()",
-   "id": "59015ccb3ea3263f",
-   "outputs": [],
-   "execution_count": 7
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-18T22:39:51.575535Z",
-     "start_time": "2024-09-18T22:39:47.876335Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "viewer = napari.Viewer()\n",
-    "viewer.add_image(scan.stack)\n",
-    "viewer.add_labels(scan.mask)"
-   ],
-   "id": "df4fe2150df1e09a",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Labels layer 'Labels' at 0x1e261d70dd0>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 9
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "",
-   "id": "6a3191e360ac71b"
+   "execution_count": 27
   }
  ],
  "metadata": {
