--- a/uCT_analysis/troubleshooting.ipynb
+++ b/uCT_analysis/troubleshooting.ipynb
@@ -1,322 +1,246 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-19T11:19:42.367854Z",
-     "start_time": "2024-09-19T11:19:40.881859Z"
+     "end_time": "2024-09-22T20:20:25.235519Z",
+     "start_time": "2024-09-22T20:20:23.203398Z"
     }
    },
+   "cell_type": "code",
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from mt.ct_utils import *\n"
+    "\n",
+    "from mt.scan import Scan\n",
+    "from mt.ct_utils import contact_area"
    ],
+   "id": "235ed9c497739f47",
    "outputs": [],
    "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-19T11:19:44.440796Z",
-     "start_time": "2024-09-19T11:19:43.455885Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "settings = SegmentationSettings(air_mask_sigma=1.5,\n",
-    "                                contrast_max_percentile=50,\n",
-    "                                contrast_min_percentile=0)"
-   ],
-   "id": "598df96d6bd50e80",
-   "outputs": [],
-   "execution_count": 2
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-19T11:19:47.087807Z",
-     "start_time": "2024-09-19T11:19:45.728937Z"
+     "end_time": "2024-09-22T20:22:12.976428Z",
+     "start_time": "2024-09-22T20:22:10.275316Z"
     }
    },
    "cell_type": "code",
    "source": [
     "path = \"../../04_uCT/AD67/\"\n",
-    "stack = load_stack(path,\n",
-    "           logging=True)"
+    "scan = Scan(path)\n",
+    "scan.load(logging=True)"
    ],
-   "id": "7eb2341ec8e7f08c",
+   "id": "802b4a835c8314ef",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loading pickled Scan object from: ../../04_uCT/AD67/Scan.pkl\n",
       "Loading images from:  ../../04_uCT/AD67/Slices/\n",
-      "Loaded stack with shape (1781, 126, 2231) and a size of 1.00 GB in 1.31 s.\n"
+      "Loaded stack with shape (1781, 126, 2231) and a size of 1.00 GB in 1.28 s.\n",
+      "Loaded mask from: ../../04_uCT/AD67/segmentation.npy\n",
+      "Loaded particle mask from: ../../04_uCT/AD67/particle_mask.npy\n"
      ]
     }
    ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-22T19:49:48.943158Z",
+     "start_time": "2024-09-22T19:49:45.360923Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "scan.show()",
+   "id": "641c469f95f166cc",
+   "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-22T19:47:09.069001Z",
+     "start_time": "2024-09-22T19:47:00.642077Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "air_al = contact_area(scan._mask, 1, 3)\n",
+    "poly_al = contact_area(scan._mask, 2, 3)"
+   ],
+   "id": "8c023f7b652aab66",
+   "outputs": [],
    "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-19T18:54:49.528203Z",
-     "start_time": "2024-09-19T18:54:49.444333Z"
+     "end_time": "2024-09-22T19:47:47.208969Z",
+     "start_time": "2024-09-22T19:47:47.163691Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "@magicgui(auto_call=False)\n",
-    "def interactive(stack: ImageData,\n",
-    "                min_p: int = 0,\n",
-    "                max_p: int = 3,\n",
-    "                sigma: float = 1.5,\n",
-    "                air_n_erosions: int = 2) -> LabelsData:\n",
-    "    settings = SegmentationSettings(air_mask_sigma=sigma,\n",
-    "                                    contrast_max_percentile=max_p,\n",
-    "                                    contrast_min_percentile=min_p,\n",
-    "                                    air_n_erosions=air_n_erosions)\n",
-    "    mask = air_segmentation(stack, settings)\n",
-    "    return mask"
+    "print(\"Air-Al: \", air_al)\n",
+    "print(\"Poly-Al: \", poly_al)\n",
+    "print(\"% poly-Al: \", poly_al/(air_al+poly_al))"
    ],
-   "id": "5a72021adbf02dd2",
-   "outputs": [],
-   "execution_count": 46
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-19T11:19:52.004971Z",
-     "start_time": "2024-09-19T11:19:51.961754Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "sub = stack[1000:1030, :, :]",
-   "id": "efe07abce1081bbb",
-   "outputs": [],
-   "execution_count": 5
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-19T11:30:57.373302Z",
-     "start_time": "2024-09-19T11:30:56.888171Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "mask = interactive(sub)",
-   "id": "3dd9e8973ebb0c0f",
-   "outputs": [],
-   "execution_count": 40
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-19T11:30:58.683626Z",
-     "start_time": "2024-09-19T11:30:58.607945Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "mask",
-   "id": "1eb7630b06bd3830",
+   "id": "3a2fdaf048801aa",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[[0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        ...,\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0]],\n",
-       "\n",
-       "       [[0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        ...,\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0]],\n",
-       "\n",
-       "       [[0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        ...,\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        ...,\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0]],\n",
-       "\n",
-       "       [[0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        ...,\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0]],\n",
-       "\n",
-       "       [[0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        ...,\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0]]])"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Air-Al:  780933\n",
+      "Poly-Al:  10248942\n",
+      "% poly-Al:  0.92919838166797\n"
+     ]
     }
    ],
-   "execution_count": 41
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-19T11:19:15.149688Z",
-     "start_time": "2024-09-19T11:19:15.104881Z"
+     "end_time": "2024-09-22T19:49:34.833432Z",
+     "start_time": "2024-09-22T19:49:34.594642Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "mask = cle.pull(mask)\n",
-    "mask = mask > 0"
+    "total_air_volume = scan._mask[scan._mask == 1].size * scan.voxel_size_mm**3\n",
+    "print(\"Total air volume: \", total_air_volume)"
    ],
-   "id": "1c626a3d8512ddd1",
-   "outputs": [],
+   "id": "98261729ff4adc1c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total air volume:  0.05938753459434442\n"
+     ]
+    }
+   ],
    "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-19T19:26:00.470995Z",
-     "start_time": "2024-09-19T19:25:59.700261Z"
+     "end_time": "2024-09-22T20:13:08.539715Z",
+     "start_time": "2024-09-22T20:13:07.497269Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "viewer = napari.Viewer()\n",
-    "viewer.add_image(stack)\n",
-    "viewer.add_labels(mask)"
+   "source": "scan.show(particle_mask_only=True)",
+   "id": "4095474962baefed",
+   "outputs": [],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-22T20:06:21.226816Z",
+     "start_time": "2024-09-22T20:06:13.383811Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "scan.calculate_properties(logging=True)",
+   "id": "9b75f67b2a558ad1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting mask analysis.\n",
+      "Starting particle analysis.\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Scan' object has no attribute 'particle_mask'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[14], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mscan\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcalculate_properties\u001B[49m\u001B[43m(\u001B[49m\u001B[43mlogging\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32m~\\OneDrive\\Documents\\StudiumDocs\\MatSci_Ma\\Thesis\\03_Computation\\mt\\scan.py:171\u001B[0m, in \u001B[0;36mScan.calculate_properties\u001B[1;34m(self, logging)\u001B[0m\n\u001B[0;32m    169\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmask_analysis()\n\u001B[0;32m    170\u001B[0m logging \u001B[38;5;129;01mand\u001B[39;00m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mStarting particle analysis.\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m--> 171\u001B[0m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcalculate_particle_statistics\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32m~\\OneDrive\\Documents\\StudiumDocs\\MatSci_Ma\\Thesis\\03_Computation\\mt\\scan.py:184\u001B[0m, in \u001B[0;36mScan.calculate_particle_statistics\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    183\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mcalculate_particle_statistics\u001B[39m(\u001B[38;5;28mself\u001B[39m):\n\u001B[1;32m--> 184\u001B[0m     props \u001B[38;5;241m=\u001B[39m cle\u001B[38;5;241m.\u001B[39mstatistics_of_labelled_pixels(\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mparticle_mask\u001B[49m)\n\u001B[0;32m    185\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mparticle_statistics \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mDataFrame(props)\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'Scan' object has no attribute 'particle_mask'"
+     ]
+    }
    ],
-   "id": "c78e6700d89efa9f",
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-22T20:06:22.671995Z",
+     "start_time": "2024-09-22T20:06:22.595591Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "scan.mask_analytics",
+   "id": "4df4ec9f46fae98d",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Labels layer 'mask' at 0x1da43683f50>"
+       "   air_Al_contact_area_mm2]  polymer_Al_contact_area_mm2  \\\n",
+       "0                  4.788188                    62.840036   \n",
+       "\n",
+       "   percent_contact_air_Al  total_air_volume_mm3  \n",
+       "0                7.080162              0.059388  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>air_Al_contact_area_mm2]</th>\n",
+       "      <th>polymer_Al_contact_area_mm2</th>\n",
+       "      <th>percent_contact_air_Al</th>\n",
+       "      <th>total_air_volume_mm3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.788188</td>\n",
+       "      <td>62.840036</td>\n",
+       "      <td>7.080162</td>\n",
+       "      <td>0.059388</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 75
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-19T18:54:52.275587Z",
-     "start_time": "2024-09-19T18:54:51.218294Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "\n",
-    "viewer = napari.Viewer()\n",
-    "viewer.add_image(sub)\n",
-    "viewer.window.add_dock_widget(interactive)"
-   ],
-   "id": "593f36719cee9f1e",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<napari._qt.widgets.qt_viewer_dock_widget.QtViewerDockWidget at 0x1d9fd88a9e0>"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 47
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-19T19:09:41.561459Z",
-     "start_time": "2024-09-19T19:09:40.863678Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "adjust_segmentation_parameters_on_subset(sub)",
-   "id": "eb75191d52d9afeb",
-   "outputs": [],
-   "execution_count": 54
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-19T19:24:48.744713Z",
-     "start_time": "2024-09-19T19:24:48.667953Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "settings = SegmentationSettings(air_mask_sigma=2.5,\n",
-    "                     air_n_erosions=1,\n",
-    "                     contrast_min_percentile=0,\n",
-    "                     contrast_max_percentile=9,\n",
-    "                     particle_mask_sigma=0.1,\n",
-    "                     particle_n_erosions=2,\n",
-    "                     particle_enlarge_radius=1,\n",
-    "                     smooth_labels_radius=2)\n",
-    "\n",
-    "                                \n",
-    "                                "
-   ],
-   "id": "94c057dc02f8e9d7",
-   "outputs": [],
-   "execution_count": 73
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-19T19:25:34.877192Z",
-     "start_time": "2024-09-19T19:24:50.044299Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "mask = segment_scan(stack, settings)",
-   "id": "b1096608b116b156",
-   "outputs": [],
-   "execution_count": 74
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "235ed9c497739f47"
+   "execution_count": 15
   }
  ],
  "metadata": {
