tested segmentation and statistics

--- a/uCT_analysis/segment_scan_test.ipynb
+++ b/uCT_analysis/segment_scan_test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:17:46.827913Z",
-     "start_time": "2024-09-22T20:17:46.668498Z"
+     "end_time": "2024-09-22T20:25:03.973006Z",
+     "start_time": "2024-09-22T20:25:02.213964Z"
     }
    },
    "source": [
@@ -18,14 +18,6 @@
     "cle.select_device(\"RTX\")"
    ],
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -40,18 +32,18 @@
        "\tImage Support:               Yes"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:17:48.719665Z",
-     "start_time": "2024-09-22T20:17:46.985562Z"
+     "end_time": "2024-09-22T20:25:05.588925Z",
+     "start_time": "2024-09-22T20:25:03.986017Z"
     }
    },
    "cell_type": "code",
@@ -69,44 +61,45 @@
      "output_type": "stream",
      "text": [
       "Loading images from:  ../../04_uCT/AD67/Slices/\n",
-      "Loaded stack with shape (1781, 126, 2231) and a size of 1.00 GB in 1.45 s.\n",
-      "Loaded existing mask from: ../../04_uCT/AD67/segmentation.npy\n"
+      "Loaded stack with shape (1781, 126, 2231) and a size of 1.00 GB in 1.22 s.\n",
+      "Loaded mask from: ../../04_uCT/AD67/segmentation.npy\n",
+      "Loaded particle mask from: ../../04_uCT/AD67/particle_mask.npy\n"
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:17:48.839322Z",
-     "start_time": "2024-09-22T20:17:48.761703Z"
+     "end_time": "2024-09-22T20:25:06.691212Z",
+     "start_time": "2024-09-22T20:25:05.742721Z"
     }
    },
    "cell_type": "code",
    "source": "# scan.try_segmentation_settings()",
    "id": "84313fbec557f455",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:17:50.516782Z",
-     "start_time": "2024-09-22T20:17:48.844328Z"
+     "end_time": "2024-09-22T20:25:07.155056Z",
+     "start_time": "2024-09-22T20:25:07.105319Z"
     }
    },
    "cell_type": "code",
    "source": "# scan.try_segmentation_settings(segment_particles_only=True)\n",
    "id": "997c92c23930bda1",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:17:50.644842Z",
-     "start_time": "2024-09-22T20:17:50.568852Z"
+     "end_time": "2024-09-22T20:25:07.222243Z",
+     "start_time": "2024-09-22T20:25:07.171071Z"
     }
    },
    "cell_type": "code",
@@ -134,13 +127,13 @@
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:17:50.799681Z",
-     "start_time": "2024-09-22T20:17:50.724047Z"
+     "end_time": "2024-09-22T20:25:07.357385Z",
+     "start_time": "2024-09-22T20:25:07.305704Z"
     }
    },
    "cell_type": "code",
@@ -173,59 +166,59 @@
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:18:26.133659Z",
-     "start_time": "2024-09-22T20:17:50.818632Z"
+     "end_time": "2024-09-22T20:25:45.340457Z",
+     "start_time": "2024-09-22T20:25:07.442521Z"
     }
    },
    "cell_type": "code",
    "source": "scan.segment()",
    "id": "79d8e60c9d04799e",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:18:34.914063Z",
-     "start_time": "2024-09-22T20:18:26.162283Z"
+     "end_time": "2024-09-22T20:25:52.160780Z",
+     "start_time": "2024-09-22T20:25:45.356473Z"
     }
    },
    "cell_type": "code",
    "source": "scan.segment_particles()",
    "id": "3ad5eaab50af2f6b",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:18:35.526579Z",
-     "start_time": "2024-09-22T20:18:34.932181Z"
+     "end_time": "2024-09-22T20:25:55.361383Z",
+     "start_time": "2024-09-22T20:25:52.176012Z"
     }
    },
    "cell_type": "code",
    "source": "scan.show()",
    "id": "402f27988caa424",
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:18:39.181931Z",
-     "start_time": "2024-09-22T20:18:35.569542Z"
+     "end_time": "2024-09-22T20:25:56.696560Z",
+     "start_time": "2024-09-22T20:25:55.515131Z"
     }
    },
    "cell_type": "code",
    "source": "scan.save()",
    "id": "4f173f6c90ae0464",
    "outputs": [],
-   "execution_count": 27
+   "execution_count": 10
   }
  ],
  "metadata": {
