Bug fixes in scan.show()

--- a/uCT_analysis/load_scan_test.ipynb
+++ b/uCT_analysis/load_scan_test.ipynb
@@ -3,46 +3,31 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:44:35.740514Z",
-     "start_time": "2024-09-22T20:44:35.656624Z"
+     "end_time": "2024-09-23T13:53:01.823330Z",
+     "start_time": "2024-09-23T13:52:56.344869Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "import numpy as np\n",
-    "from sphinx.addnodes import index\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "import pandas as pd\n",
-    "\n",
-    "\n",
-    "from mt.scan import Scan\n",
-    "from mt.ct_utils import contact_area"
+    "from mt.scan import Scan"
    ],
    "id": "235ed9c497739f47",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
-   "execution_count": 13
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:30:33.213909Z",
-     "start_time": "2024-09-22T20:30:29.756431Z"
+     "end_time": "2024-09-23T13:53:18.935191Z",
+     "start_time": "2024-09-23T13:53:01.831103Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "path = \"../../04_uCT/AD67/\"\n",
+    "path = \"../../04_uCT/AD51/\"\n",
     "scan = Scan(path)\n",
     "scan.load(logging=True)"
    ],
@@ -52,11 +37,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading pickled Scan object from: ../../04_uCT/AD67/Scan.pkl\n",
-      "Loading images from:  ../../04_uCT/AD67/Slices/\n",
-      "Loaded stack with shape (1781, 126, 2231) and a size of 1.00 GB in 1.74 s.\n",
-      "Loaded mask from: ../../04_uCT/AD67/segmentation.npy\n",
-      "Loaded particle mask from: ../../04_uCT/AD67/particle_mask.npy\n"
+      "Loading pickled Scan object from: ../../04_uCT/AD51/Scan.pkl\n",
+      "Loading images from:  ../../04_uCT/AD51/Slices/\n",
+      "Loaded stack with shape (1780, 322, 2267) and a size of 2.60 GB in 16.96 s.\n",
+      "No segmentation.npy file found at: ../../04_uCT/AD51/segmentation.npy\n",
+      "No particle_mask.npy file found at: ../../04_uCT/AD51/particle_mask.npy\n"
      ]
     }
    ],
@@ -65,15 +50,36 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:30:43.484451Z",
-     "start_time": "2024-09-22T20:30:40.156663Z"
+     "end_time": "2024-09-23T13:53:20.417048Z",
+     "start_time": "2024-09-23T13:53:19.027753Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "scan.reslice()",
+   "id": "bc19c751ccd88c42",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-23T13:53:27.327855Z",
+     "start_time": "2024-09-23T13:53:21.396385Z"
     }
    },
    "cell_type": "code",
    "source": "scan.show()",
    "id": "641c469f95f166cc",
-   "outputs": [],
-   "execution_count": 3
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No mask found.\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "metadata": {
