Added function for voronoi tesselation

--- a/uCT_analysis/segment_scan_test.ipynb
+++ b/uCT_analysis/segment_scan_test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:25:03.973006Z",
-     "start_time": "2024-09-22T20:25:02.213964Z"
+     "end_time": "2024-09-23T20:31:53.386646Z",
+     "start_time": "2024-09-23T20:31:51.428954Z"
     }
    },
    "source": [
@@ -42,8 +42,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:25:05.588925Z",
-     "start_time": "2024-09-22T20:25:03.986017Z"
+     "end_time": "2024-09-23T20:31:57.364343Z",
+     "start_time": "2024-09-23T20:31:53.618883Z"
     }
    },
    "cell_type": "code",
@@ -51,8 +51,7 @@
     "path = \"../../04_uCT/AD67/\"\n",
     "scan = Scan(path,\n",
     "            discard_ends=True)\n",
-    "scan.load(logging=True,\n",
-    "          refresh=True)"
+    "scan.load(logging=True)"
    ],
    "id": "96cae9eb82305a89",
    "outputs": [
@@ -60,8 +59,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loading pickled Scan object from: ../../04_uCT/AD67/Scan.pkl\n",
       "Loading images from:  ../../04_uCT/AD67/Slices/\n",
-      "Loaded stack with shape (1781, 126, 2231) and a size of 1.00 GB in 1.22 s.\n",
+      "Loaded stack with shape (1781, 126, 2231) and a size of 1.00 GB in 1.92 s.\n",
       "Loaded mask from: ../../04_uCT/AD67/segmentation.npy\n",
       "Loaded particle mask from: ../../04_uCT/AD67/particle_mask.npy\n"
      ]
@@ -72,8 +72,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:25:06.691212Z",
-     "start_time": "2024-09-22T20:25:05.742721Z"
+     "end_time": "2024-09-23T20:31:57.417109Z",
+     "start_time": "2024-09-23T20:31:57.369350Z"
     }
    },
    "cell_type": "code",
@@ -85,12 +85,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:25:07.155056Z",
-     "start_time": "2024-09-22T20:25:07.105319Z"
+     "end_time": "2024-09-23T20:31:57.879019Z",
+     "start_time": "2024-09-23T20:31:57.833301Z"
     }
    },
    "cell_type": "code",
-   "source": "# scan.try_segmentation_settings(segment_particles_only=True)\n",
+   "source": "# scan.try_segmentation_settings(segment_particles_only=True, subset_size=30)",
    "id": "997c92c23930bda1",
    "outputs": [],
    "execution_count": 4
@@ -98,14 +98,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:25:07.222243Z",
-     "start_time": "2024-09-22T20:25:07.171071Z"
+     "end_time": "2024-09-23T20:31:57.942729Z",
+     "start_time": "2024-09-23T20:31:57.894830Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "settings = SegmentationSettings(particle_mask_sigma=0.4,\n",
-    "                                particle_n_erosions=3,\n",
+    "settings = SegmentationSettings(particle_mask_sigma=0.8,\n",
+    "                                particle_n_erosions=7,\n",
     "                                particle_enlarge_radius=1)\n",
     "scan.set_particle_segmentation_settings(settings)\n",
     "print(scan.particle_segmentation_settings)"
@@ -118,8 +118,8 @@
      "text": [
       "air_mask_simga = 0.6\n",
       "air_n_erosions = 2\n",
-      "particle_mask_sigma = 0.4\n",
-      "particle_n_erosions = 3\n",
+      "particle_mask_sigma = 0.8\n",
+      "particle_n_erosions = 7\n",
       "particle_enlarge_radius = 1\n",
       "smooth_labels_radius = 2\n",
       "contrast_min_percentile = 0\n",
@@ -132,8 +132,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:25:07.357385Z",
-     "start_time": "2024-09-22T20:25:07.305704Z"
+     "end_time": "2024-09-23T20:31:58.069665Z",
+     "start_time": "2024-09-23T20:31:58.020096Z"
     }
    },
    "cell_type": "code",
@@ -171,8 +171,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:25:45.340457Z",
-     "start_time": "2024-09-22T20:25:07.442521Z"
+     "end_time": "2024-09-23T20:32:32.410117Z",
+     "start_time": "2024-09-23T20:31:58.086834Z"
     }
    },
    "cell_type": "code",
@@ -184,8 +184,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:25:52.160780Z",
-     "start_time": "2024-09-22T20:25:45.356473Z"
+     "end_time": "2024-09-23T20:32:43.635085Z",
+     "start_time": "2024-09-23T20:32:32.427291Z"
     }
    },
    "cell_type": "code",
@@ -197,28 +197,28 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:25:55.361383Z",
-     "start_time": "2024-09-22T20:25:52.176012Z"
+     "end_time": "2024-09-23T20:33:20.801924Z",
+     "start_time": "2024-09-23T20:33:19.754446Z"
     }
    },
    "cell_type": "code",
-   "source": "scan.show()",
+   "source": "scan.show(particle_mask_only=True, axis=\"z\")",
    "id": "402f27988caa424",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T20:25:56.696560Z",
-     "start_time": "2024-09-22T20:25:55.515131Z"
+     "end_time": "2024-09-23T20:32:50.939868Z",
+     "start_time": "2024-09-23T20:32:48.277193Z"
     }
    },
    "cell_type": "code",
    "source": "scan.save()",
    "id": "4f173f6c90ae0464",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 11
   }
  ],
  "metadata": {
