restructured scan class

--- a/uCT_analysis/segment_scan_test.ipynb
+++ b/uCT_analysis/segment_scan_test.ipynb
@@ -104,11 +104,22 @@
    },
    "cell_type": "code",
    "source": [
-    "settings = SegmentationSettings(particle_mask_sigma=0.8,\n",
+    "particle_settings = SegmentationSettings(particle_mask_sigma=0.8,\n",
     "                                particle_n_erosions=7,\n",
     "                                particle_enlarge_radius=1)\n",
-    "scan.set_particle_segmentation_settings(settings)\n",
-    "print(scan.particle_segmentation_settings)"
+    "scan.set_particle_segmentation_settings(particle_settings)\n",
+    "print(scan.particle_segmentation_settings)\n",
+    "\n",
+    "general_settings = SegmentationSettings(air_mask_sigma=0.6,\n",
+    "                                air_n_erosions=2,\n",
+    "                                contrast_min_percentile=0,\n",
+    "                                contrast_max_percentile=9,\n",
+    "                                particle_mask_sigma=0.2,\n",
+    "                                particle_n_erosions=2,\n",
+    "                                particle_enlarge_radius=1,\n",
+    "                                smooth_labels_radius=2)\n",
+    "scan.set_segmentation_settings(general_settings)\n",
+    "print(scan.segmentation_settings)"
    ],
    "id": "311bb33242bdf9c0",
    "outputs": [
@@ -132,51 +143,16 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T20:31:58.069665Z",
-     "start_time": "2024-09-23T20:31:58.020096Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "settings = SegmentationSettings(air_mask_sigma=0.6,\n",
-    "                                air_n_erosions=2,\n",
-    "                                contrast_min_percentile=0,\n",
-    "                                contrast_max_percentile=9,\n",
-    "                                particle_mask_sigma=0.2,\n",
-    "                                particle_n_erosions=2,\n",
-    "                                particle_enlarge_radius=1,\n",
-    "                                smooth_labels_radius=2)\n",
-    "scan.set_segmentation_settings(settings)\n",
-    "print(scan.segmentation_settings)"
-   ],
-   "id": "bb06eeeb2b1d2340",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "air_mask_simga = 0.6\n",
-      "air_n_erosions = 2\n",
-      "particle_mask_sigma = 0.2\n",
-      "particle_n_erosions = 2\n",
-      "particle_enlarge_radius = 1\n",
-      "smooth_labels_radius = 2\n",
-      "contrast_min_percentile = 0\n",
-      "contrast_max_percentile = 9\n"
-     ]
-    }
-   ],
-   "execution_count": 6
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
      "end_time": "2024-09-23T20:32:32.410117Z",
      "start_time": "2024-09-23T20:31:58.086834Z"
     }
    },
    "cell_type": "code",
-   "source": "scan.segment()",
+   "source": [
+    "scan.segment()\n",
+    "scan.segment_particles()\n",
+    "scan."
+   ],
    "id": "79d8e60c9d04799e",
    "outputs": [],
    "execution_count": 7
@@ -189,7 +165,7 @@
     }
    },
    "cell_type": "code",
-   "source": "scan.segment_particles()",
+   "source": "",
    "id": "3ad5eaab50af2f6b",
    "outputs": [],
    "execution_count": 8
